--- a/Sketches/08-LineNoise/index.html
+++ b/Sketches/08-LineNoise/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONNECTED LINES</title>
+    <title>LINE NOISE</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
